src/objects/BD_Cost_Charge__c.object
<CustomObject>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>ExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Actual_costs_and_expenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scope_date__c</fullName>
        <label>Scope date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Staff_Cost__c</fullName>
        <label>Staff Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Staff_Cost__c +  Travel_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Cost__c</fullName>
        <label>Travel Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>BD Cost Charge</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>BD Cost Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BD Cost Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cost_or_Expense_exist</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
  AND(
      Staff_Cost__c &lt;= 0,
      Travel_Cost__c &lt;=0
  ),
   ISBLANK(Staff_Cost__c), 
   ISBLANK(Travel_Cost__c)
)</errorConditionFormula>
        <errorMessage>Cost or expense must be filled and major than 0</errorMessage>
    </validationRules>
</CustomObject>